adding appendChild Test

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>JavaScript Sandbox</h1>
+    <div class="test-btn">Test</div>
+    <div class="goal-div"></div>
+    <div class="images">
+        <p>this is an image</p>
+    </div>
 
     <script src="app.js"></script>
 </body>
