--- a/2.html
+++ b/2.html
@@ -9,13 +9,9 @@
     <title>Javascript Sandbox</title>
 </head>
 <body>
-    <div class="scatter-container">
-        <div class="tools">
-            <button id="reset">Reset</button>
-        </div>
-    </div>
-    
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="js/app.js"></script>
+    <canvas width="800" height="500" class="canvas2" id="canvas2"></canvas>
+
+    <script src="https://code.easypz.io/easypz.latest.min.js"></script>
+    <script src="js/app2.js"></script>
 </body>
 </html>
