--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Javascript Sandbox</title>
 </head>
 <body>
-    <div class="scatter-container">
-        <div class="tools">
-            <button id="reset">Reset</button>
-        </div>
-    </div>
+    <canvas height="700" width="1200" id="myCanvas"></canvas>
     
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <!-- <script src="https://d3js.org/d3-selection.v2.min.js"></script>
+    <script src="https://d3js.org/d3-zoom.v2.min.js"></script>
+    <script src="https://d3js.org/d3-dispatch.v2.min.js"></script> -->
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
